@@ -70,30 +70,30 @@ install-bootscripts: create-dirs create-service-dir udev_device_dirs udev_device
 	install -m ${MODE} clfs/init.d/reboot        ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/sendsignals   ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/setclock	     ${EXTDIR}/rc.d/init.d/
-	install -m ${MODE} clfs/init.d/sysklogd      ${EXTDIR}/rc.d/init.d/
+	install -m ${MODE} clfs/init.d/rsyslog       ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/swap          ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/sysctl        ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/template      ${EXTDIR}/rc.d/init.d/
 	install -m ${MODE} clfs/init.d/udev          ${EXTDIR}/rc.d/init.d/
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc0.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc0.d/K90sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc0.d/K90rsyslog
 	ln -sf ../init.d/sendsignals ${EXTDIR}/rc.d/rc0.d/S60sendsignals
 	ln -sf ../init.d/mountfs     ${EXTDIR}/rc.d/rc0.d/S70mountfs
 	ln -sf ../init.d/swap        ${EXTDIR}/rc.d/rc0.d/S80swap
 	ln -sf ../init.d/localnet    ${EXTDIR}/rc.d/rc0.d/S90localnet
 	ln -sf ../init.d/halt        ${EXTDIR}/rc.d/rc0.d/S99halt
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc1.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc1.d/S10sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc1.d/S10rsyslog
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc2.d/S20network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc2.d/S10sysklogd
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc3.d/S10sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc2.d/S10rsyslog
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc3.d/S10rsyslog
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc3.d/S20network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc4.d/S10sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc4.d/S10rsyslog
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc4.d/S20network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc5.d/S10sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc5.d/S10rsyslog
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc5.d/S20network
 	ln -sf ../init.d/network     ${EXTDIR}/rc.d/rc6.d/K80network
-	ln -sf ../init.d/sysklogd    ${EXTDIR}/rc.d/rc6.d/K90sysklogd
+	ln -sf ../init.d/rsyslog     ${EXTDIR}/rc.d/rc6.d/K90rsyslog
 	ln -sf ../init.d/sendsignals ${EXTDIR}/rc.d/rc6.d/S60sendsignals
 	ln -sf ../init.d/mountfs     ${EXTDIR}/rc.d/rc6.d/S70mountfs
 	ln -sf ../init.d/swap        ${EXTDIR}/rc.d/rc6.d/S80swap
@@ -627,6 +627,16 @@ install-sendmail: create-dirs
 	ln -sf  ../init.d/sendmail ${EXTDIR}/rc.d/rc5.d/S35sendmail
 	ln -sf  ../init.d/sendmail ${EXTDIR}/rc.d/rc6.d/K25sendmail
 
+install-sysklogd create-dirs
+	install -m ${MODE} cblfs/init.d/sysklogd   ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc0.d/K90sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc1.d/S10sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc2.d/S10sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc3.d/S10sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc4.d/S10sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc5.d/S10sysklogd
+	ln -sf  ../init.d/sysklogd ${EXTDIR}/rc.d/rc6.d/K90sysklogd
+
 install-qpopper: create-dirs
 	install -m ${MODE} cblfs/init.d/qpopper   ${EXTDIR}/rc.d/init.d/
 	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc0.d/K23qpopper
@@ -1104,6 +1114,16 @@ uninstall-sendmail:
 	rm -f ${EXTDIR}/rc.d/rc4.d/S35sendmail
 	rm -f ${EXTDIR}/rc.d/rc5.d/S35sendmail
 	rm -f ${EXTDIR}/rc.d/rc6.d/K25sendmail
+
+uninstall-sysklogd:
+	rm -f ${EXTDIR}/rc.d/init.d/sysklogd
+	rm -f ${EXTDIR}/rc.d/rc0.d/K90sysklogd
+	rm -f ${EXTDIR}/rc.d/rc1.d/S10sysklogd
+	rm -f ${EXTDIR}/rc.d/rc2.d/S10sysklogd
+	rm -f ${EXTDIR}/rc.d/rc3.d/S10sysklogd
+	rm -f ${EXTDIR}/rc.d/rc4.d/S10sysklogd
+	rm -f ${EXTDIR}/rc.d/rc5.d/S10sysklogd
+	rm -f ${EXTDIR}/rc.d/rc6.d/S10sysklogd
 
 uninstall-sshd:
 	rm -f ${EXTDIR}/rc.d/init.d/sshd
